# mjolnir

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  demo_det.cc  readme.md
include/: colors.h  file_io.h  image.h  structures.h  vis.h
include/mjolnir/: colors.h  datasets.h  image.h  io.h  log.h  strs.h  structures.h  type.h  vis.h
src/: image.cc  io.cc  vis.cc
